gccida/c1/offsettable_address_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2394:42: error: must use 'enum' tag to refer to type 'machine_mode'
int  offsettable_address_p( int strictp, machine_mode mode, rtx y) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2398:28: error: unexpected type name 'rtx': expected identifier
int (  *v7)( machine_mode, rtx); // r13 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2398:14: error: a parameter list without types is only allowed in a function definition
int (  *v7)( machine_mode, rtx); // r13 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2406:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2409:4: error: expected ';' after expression
rtx v19; // [rsp+0h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2409:5: error: use of undeclared identifier 'v19'
rtx v19; // [rsp+0h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2411:1: error: use of undeclared identifier 'v19'
v19 = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2413:1: error: use of undeclared identifier 'v19'
v19 = y; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2426:84: error: use of undeclared identifier 'v19'
if ( ( unsigned __int16)v6 == 75 && ( constant_term_loc = find_constant_term_loc( &v19)) != 0LL ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2429:1: error: use of undeclared identifier 'v19'
v19 = *constant_term_loc; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2432:8: error: use of undeclared identifier 'v19'
*v14 = v19; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/recog.c:2440:35: error: expected expression
v18 = plus_constant_wide( *( rtx *)&y[1], v12 - 1); 
                                  ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/offsettable_address_p/src/obj/recog.o] Error 1
